--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   uuid_type: ^2.0.0
   flutter_html: ^0.8.2
   comment_box: ^0.0.17
+  fl_chart: ^0.7.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -47,6 +48,7 @@ dev_dependencies:
   flutter_launcher_icons: "^0.10.0"
   flutter_test:
     sdk: flutter
+
 flutter_icons:
   android: true
   ios: true
