update donor page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "dart.flutterSdkPath": "C:\\src\\flutter"
+  "dart.flutterSdkPath": "C:\\src\\flutter",
+  "cmake.sourceDirectory": "${workspaceFolder}/windows/flutter"
 }
