--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^1.1.5
   image_picker: ^0.8.6
+  comment_tree: ^0.3.0
 
 dev_dependencies:
   flutter_launcher_icons: "^0.10.0"
