--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_svg: ^1.1.5
   image_picker: ^0.8.6
   comment_tree: ^0.3.0
+  flutter_stripe: ^7.0.0
 
 dev_dependencies:
   flutter_launcher_icons: "^0.10.0"
